--- a/bundle_hadoop/src/layouts/has_sidebar.html
+++ b/bundle_hadoop/src/layouts/has_sidebar.html
@@ -6,24 +6,11 @@
 </head>
 
 <body class="article">
-  <!-- <div class="article"> -->
-  <!-- Header -->
   {{> header }}
-  <!-- navbar -->
-  {{> nav}}
-  <!-- Sidebar -->
-  {{> sidebar}}
-  <!-- right nav -->
-  {{> right-nav}}
-  <!-- Main -->
-  <main class="main" style="color: #fff">
-    <!-- <div class="container"> -->
-    {{> body }}
-    <!-- main -->
-    <!-- </div> -->
-  </main>
-  {{> footer}}
+  <!-- <div class="body"> -->
+  {{> testbody}}
   <!-- </div> -->
+  {{> footer}}
   <!-- JS -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
