--- a/bundle_hadoop/src/partials/footer.html
+++ b/bundle_hadoop/src/partials/footer.html
@@ -17,69 +17,88 @@
           <a href="#">Privacy Policy</a>
         </div>
       </div>
-      <div class="footer-page__products">
-        <div class="footer-page__products-head">
-          Products
+      <div class="footer-page-l">
+        <div class="footer-page-link">
+          <div class="footer-page-link-head">
+            <div class="footer-page-link-head__title">
+              Products
+            </div>
+            <a class="chevron-footer-right" role="button" data-toggle="collapse" data-target="#block-products"
+              aria-expanded="false" aria-controls="block-products">
+            </a>
+          </div>
+          <div class="collapse footer-page-link-head__body" id="block-products">
+            <a href="#">
+              Arenadata DB
+            </a>
+            <a href="#">Arenadata Hadoop</a>
+            <a href="#">Arenadata Quickmarts</a>
+            <a href="#">Arenadata Streaming</a>
+            <a href="#">Arenadata Grid</a>
+            <a href="#">Arenadata Cluster Manager</a>
+          </div>
         </div>
-        <div class="footer-page__products-text">
-          <a href="#">
-            Arenadata DB
-          </a>
-          <a href="#">Arenadata Hadoop</a>
-          <a href="#">Arenadata Quickmarts</a>
-          <a href="#">Arenadata Streaming</a>
-          <a href="#">Arenadata Grid</a>
-          <a href="#">Arenadata Cluster Manager</a>
+        <div class="footer-page-link">
+          <div class="footer-page-link-head">
+            <div class="footer-page-link-head__title">
+              Services
+            </div>
+            <a class="chevron-footer-right" role="button" data-toggle="collapse" data-target="#block-services"
+              aria-expanded="false" aria-controls="block-services">
+            </a>
+          </div>
+          <div class="collapse footer-page-link-head__body" id="block-services">
+            <a href="#">
+              DBA as a service
+            </a>
+            <a href="#">Smart Start</a>
+            <a href="#">Digital landscape audit</a>
+            <a href="#">Architectural Control</a>
+          </div>
         </div>
-      </div>
-      <div class="footer-page__services">
-        <div class="footer-page__services-head">
-          Services
-        </div>
-        <div class="footer-page__services-text">
-          <a href="#">
-            DBA as a service
-          </a>
-          <a href="#">Smart Start</a>
-          <a href="#">Digital landscape audit</a>
-          <a href="#">Architectural Control</a>
-        </div>
-      </div>
-      <div class="footer-page__about">
-        <div class="footer-page__about-head">
-          About
-        </div>
-        <div class="footer-page__about-text">
-          <a href="#">
-            About
-          </a>
-          <a href="#">Partners</a>
-          <a href="#">News</a>
-          <a href="#">Contacts</a>
+        <div class="footer-page-link">
+          <div class="footer-page-link-head">
+            <div class="footer-page-link-head__title">
+              About
+            </div>
+            <a class="chevron-footer-right" role="button" data-toggle="collapse" data-target="#block-about"
+              aria-expanded="false" aria-controls="block-about">
+            </a>
+          </div>
+          <div class="collapse footer-page-link-head__body" id="block-about">
+            <a href="#">
+              About
+            </a>
+            <a href="#">Partners</a>
+            <a href="#">News</a>
+            <a href="#">Contacts</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="footer-page__links">
-      <span class="footer-page__links-text">© Arenadata Software LLC, 2021</span>
-      <div class="footer-page__icons">
-        <a href="#">
-          <div class="icon-footer-twitter"></div>
-        </a>
-        <a href="#">
-          <div class="icon-footer-facebook"></div>
-        </a>
-        <a href="#">
-          <div class="icon-footer-inlinked"></div>
-        </a>
-        <a href="#">
-          <div class="icon-footer-instagramm"></div>
-        </a>
-        <a href="#">
-          <div class="icon-footer-h"></div>
-        </a>
-        <a href="#">
-          <div class="icon-footer-youtube"></div>
-        </a>
+    <div class="footer-page__link">
+      <div class="footer-page__links">
+        <span class="footer-page__links-text">© Arenadata Software LLC, 2021</span>
+        <div class="footer-page__icons">
+          <a href="#">
+            <div class="icon-footer-twitter"></div>
+          </a>
+          <a href="#">
+            <div class="icon-footer-facebook"></div>
+          </a>
+          <a href="#">
+            <div class="icon-footer-inlinked"></div>
+          </a>
+          <a href="#">
+            <div class="icon-footer-instagramm"></div>
+          </a>
+          <a href="#">
+            <div class="icon-footer-h"></div>
+          </a>
+          <a href="#">
+            <div class="icon-footer-youtube"></div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
