--- a/bundle_hadoop/src/assets/scss/blocks/blocks-card.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/blocks-card.scss
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 72px;
+  flex-wrap: wrap;
 }
 
 .blocks-card-components-card {
