--- a/bundle_hadoop/src/layouts/default.html
+++ b/bundle_hadoop/src/layouts/default.html
@@ -5,20 +5,9 @@
     {{> head }}
 </head>
 
-<body>
-    <div class="page">
-        <!-- Header -->
-        {{> header }}
-        <!-- Main -->
-        <main class="main" style="color: #FFF;">
-            <!-- <div class="container"> -->
-            {{> body }}
-            <!-- main -->
-            <!-- </div> -->
-        </main>
-        {{> footer}}
-    </div>
-    <!-- JS -->
+<body class="home">
+    {{> header}}
+    {{> footer}}
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
