--- a/bundle_hadoop/src/assets/scss/blocks/btn.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/btn.scss
@@ -1,46 +1,8 @@
-// .btn {
-//     display: inline-block;
-//     vertical-align: top;
-//     padding: 1.12em 2.1em;
-
-//     background: $secondary;
-//     border: none;
-//     cursor: pointer;
-//     border-radius: 3em;
-
-//     font-family: inherit;
-//     font-size: 1.2rem;
-//     line-height: 1.1;
-//     font-weight: 500;
-//     color: $white;
-//     text-decoration: none;
-
-//     transition: background-color .2s linear;
-
-//     &--red {
-//         background-color: $red;
-//         box-shadow: 0 7px 17px -10px rgba($red, .3);
-
-//         &:hover {
-//             background-color: darken($red, 5%);
-//         }
-//     }
-
-//     &--blue {
-//         background-color: $blue;
-//         box-shadow: 0 7px 17px -10px rgba($blue, .3);
-
-//         &:hover {
-//             background-color: darken($blue, 5%);
-//         }
-//     }
-// }
-
 .btn_ {
-    padding: 9px 24px;
+    // padding: 9px 24px;
 
     // position: static;
-    width: 148px;
+    // width: 148px;
     height: 38px;
     left: 816px;
     top: 0px;
