--- a/bundle_hadoop/src/partials/header.html
+++ b/bundle_hadoop/src/partials/header.html
@@ -6,6 +6,12 @@
       </a>
     </div>
     <ul class="nav__list">
+      <div class="sidebar-logo">
+        <div class="logo-name">
+        </div>
+        <div class="nav__burger close-bar">
+        </div>
+      </div>
       <li class="nav__item">
         <a class="nav__link" href="/">
           <span class="nav__link-text">
@@ -40,12 +46,7 @@
       <li class="nav__item">
         <a class="nav__link" href="#">
           <span class="nav__link-text">
-            Reference
-          </span></a>
-      </li>
-      <li class="nav__item">
-        <a class="nav__link" href="#"><span class="nav__link-text">
-            Knowledge Base
+            Knowledge base
           </span></a>
       </li>
       <li class="nav__item">
@@ -54,19 +55,43 @@
           </span></a>
       </li>
       <li class="nav__item">
+        <a class="nav__link" href="#"><span class="nav__link-text">
+            Download bundles
+          </span></a>
+      </li>
+      <li class="nav__item">
         <a class="nav__link btn_" href="#">
           <div class="nav__link-button">
-            Download
+            <span>Download</span> PDF
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M14.25 4L14.25 13M14.25 13L18 9.09211M14.25 13L10.5 9.0921" stroke="currentColor"
+                stroke-width="2" />
+              <rect x="9" y="14.5" width="10.5" height="1.5" />
+            </svg>
           </div>
-          <img src="assets/images/donwload.svg" alt="" srcset="">
         </a>
       </li>
     </ul>
     <div class="nav__mode">
-      <div>
-        <img class="icon-sun" src="../assets//images/icon_sun.svg" alt="" srcset="">
-        <img class="icon-dark" src="../assets//images/icon_dark.svg" alt="" srcset="">
-      </div>
+      <!-- <div> -->
+      <button class="icon-mode icon-sun">
+        <svg width="24" height="24" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M13 21a8 8 0 1 0 0-16 8 8 0 0 0 0 16Z" stroke="currentColor" stroke-miterlimit="10" />
+          <path
+            d="m13 21.405.01 3.6M13 1.005l-.01 3.65M4.6 13.005l-3.6.01M25 13.005l-3.65-.01M7.06 18.945l-2.54 2.55M21.48 4.515l-2.58 2.58M7.06 7.065l-2.55-2.54M21.49 21.485l-2.58-2.58"
+            stroke="currentColor" stroke-miterlimit="10" stroke-linecap="round" />
+        </svg>
+      </button>
+      <button class="icon-mode icon-dark">
+        <svg width="20" height="20" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M6.82417 2.12179C8.79455 2.29175 10.5649 3.60143 11.215 5.60095C12.0852 8.26031 10.6349 11.1196 7.97438 11.9894C5.31387 12.8592 2.45332 11.4095 1.58316 8.75019C1.35311 8.04036 1.00305 8.19032 1.00305 9.01013C1.00305 9.82993 1.12307 10.6697 1.39313 11.4895C2.76339 15.6885 7.28426 17.978 11.4851 16.6083C15.6859 15.2386 17.9763 10.7197 16.606 6.52073C15.2358 2.32174 10.7149 0.0322921 6.5141 1.40196C6.5141 1.40196 6.04402 1.48194 6.17404 1.80187C6.29407 2.11179 6.82417 2.12179 6.82417 2.12179Z"
+            stroke="currentColor" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </button>
+      <!-- </div> -->
+    </div>
+    <div class="nav__burger open-bar">
     </div>
   </nav>
 </header>
