--- a/bundle_hadoop/src/assets/scss/blocks/header.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/header.scss
@@ -7,7 +7,5 @@
 
     /* New */
 
-    background: linear-gradient(157.42deg, #2E2C2D 0%, #27262B 98.49%);
-
-
+    // background: var(--header-bg, linear-gradient(157.42deg, #2E2C2D 0%, #2E2C2D 0%, #2B292C 0.01%, #27262B 98.49%));
 }
