--- a/bundle_hadoop/src/partials/header.html
+++ b/bundle_hadoop/src/partials/header.html
@@ -74,7 +74,7 @@
     </ul>
     <div class="nav__mode">
       <!-- <div> -->
-      <button class="icon-mode icon-sun">
+      <button class="icon-mode icon-sun" value="light">
         <svg width="24" height="24" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M13 21a8 8 0 1 0 0-16 8 8 0 0 0 0 16Z" stroke="currentColor" stroke-miterlimit="10" />
           <path
@@ -82,7 +82,7 @@
             stroke="currentColor" stroke-miterlimit="10" stroke-linecap="round" />
         </svg>
       </button>
-      <button class="icon-mode icon-dark">
+      <button class="icon-mode icon-dark" value="dark">
         <svg width="20" height="20" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M6.82417 2.12179C8.79455 2.29175 10.5649 3.60143 11.215 5.60095C12.0852 8.26031 10.6349 11.1196 7.97438 11.9894C5.31387 12.8592 2.45332 11.4095 1.58316 8.75019C1.35311 8.04036 1.00305 8.19032 1.00305 9.01013C1.00305 9.82993 1.12307 10.6697 1.39313 11.4895C2.76339 15.6885 7.28426 17.978 11.4851 16.6083C15.6859 15.2386 17.9763 10.7197 16.606 6.52073C15.2358 2.32174 10.7149 0.0322921 6.5141 1.40196C6.5141 1.40196 6.04402 1.48194 6.17404 1.80187C6.29407 2.11179 6.82417 2.12179 6.82417 2.12179Z"
